Fixed content bug overlapping with footer

--- a/prototype/src/assets/scss/components/_how-it-works.scss
+++ b/prototype/src/assets/scss/components/_how-it-works.scss
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    padding: 80px 0 48px;
+    padding: 110px 0 100px;
 
     ul > li + li {
         margin-top: 1rem;
