--- a/prototype/src/assets/scss/components/_shorten-page.scss
+++ b/prototype/src/assets/scss/components/_shorten-page.scss
@@ -5,7 +5,7 @@
     color: $white;
     display: flex;
     align-items: center;
-    padding: 80px 0 48px;
+    padding: 110px 0 100px;
 }
 
 .metamask-banner {
